add_executable(1787a 1787a.cpp)
add_executable(1787b 1787b.cpp)
add_executable(1808b 1808b.cpp)
add_executable(1827a 1827a.cpp)
add_executable(1834a 1834a.cpp)
add_executable(1881a 1881a.cpp)
add_executable(1884a 1884a.cpp)
add_executable(1884b 1884b.cpp)
add_executable(1887a 1887a.cpp)
add_executable(1887b 1887b.cpp)
