add_executable(1787a 1787a.cpp)
add_executable(1787b 1787b.cpp)
add_executable(1808b 1808b.cpp)
add_executable(1827a 1827a.cpp)
add_executable(1834a 1834a.cpp)
add_executable(1881a 1881a.cpp)
add_executable(1884a 1884a.cpp)
add_executable(1884b 1884b.cpp)
add_executable(1887a 1887a.cpp)
add_executable(1887b 1887b.cpp)
add_executable(1877a 1877a.cpp)
add_executable(1877c 1877c.cpp)
add_executable(1905c 1905c.cpp)
add_executable(1919a 1919a.cpp)
add_executable(1919b 1919b.cpp)
add_executable(1895b 1895b.cpp)
add_executable(1895a 1895a.cpp)
add_executable(1791a 1791a.cpp)
add_executable(1770a 1770a.cpp)
add_executable(1734b 1734b.cpp)
add_executable(0414b 0414b.cpp)
add_executable(0456a 0456a.cpp)
add_executable(0507b 0507b.cpp)
add_executable(0514b 0514b.cpp)
add_executable(0514c 0514c.cpp)
add_executable(0515c 0515c.cpp)
add_executable(0550b 0550b.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0731a 0731a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1195c 1195c.cpp)
